src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACO_Name__c</fullName>
        <description>Affiliated Accountable Care Organization</description>
        <label>ACO Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACO__c</fullName>
        <description>Affiliated with an ACO</description>
        <label>ACO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASO__c</fullName>
        <description>Self-Funded</description>
        <label>ASO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_picklist__c</fullName>
        <description>Account Manager (as indicated in the Support one-sheeters)</description>
        <label>Account Manager - Delete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connor Nystuen</fullName>
                </value>
                <value>
                    <fullName>Jodi Nichols</fullName>
                </value>
                <value>
                    <fullName>Kelly Sanderson</fullName>
                </value>
                <value>
                    <fullName>Kimberly McEwen</fullName>
                </value>
                <value>
                    <fullName>Marc Patefield</fullName>
                </value>
                <value>
                    <fullName>Megan Gaupp</fullName>
                </value>
                <value>
                    <fullName>Melissa Jattne</fullName>
                </value>
                <value>
                    <fullName>Shelly Scallon</fullName>
                </value>
                <value>
                    <fullName>Stephen Pedersen</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <label>Account Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rally</fullName>
                </value>
                <value>
                    <fullName>Partner (CCS, SAE, SCE, DHPM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Countries__c</fullName>
        <label>Additional Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Curaçao</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions__c</fullName>
        <description>Number of admissions</description>
        <label>Admissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alex_Update__c</fullName>
        <label>Alex Update</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <description>Names that company may also be known by</description>
        <label>Aliases</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <label>Area of Interest</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auctions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auctions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biometric_Form_Link__c</fullName>
        <label>Biometric Form Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSM_Email__c</fullName>
        <label>CSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (CSM Name)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Challenges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Configured_Private_Challenges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Configured Private Challenges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Launch_Date__c</fullName>
        <label>Client Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Offers_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Offers Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Support_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Support Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Support_Manager_picklist__c</fullName>
        <label>Client Support Manager - Delete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Brandi Bojdak</fullName>
                </value>
                <value>
                    <fullName>Brian Boyle</fullName>
                </value>
                <value>
                    <fullName>Emily Masini</fullName>
                </value>
                <value>
                    <fullName>Jodi Nichols</fullName>
                </value>
                <value>
                    <fullName>Katie Bublitz</fullName>
                </value>
                <value>
                    <fullName>Nona McKinley</fullName>
                </value>
                <value>
                    <fullName>Rachel Mahoney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Number__c</fullName>
        <label>Coaching Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Coin_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coin Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Lives__c</fullName>
        <label>Commercial Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Current Incumbent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Redbrick</fullName>
                </value>
                <value>
                    <fullName>Keas</fullName>
                </value>
                <value>
                    <fullName>Vitality</fullName>
                </value>
                <value>
                    <fullName>Virgin Health</fullName>
                </value>
                <value>
                    <fullName>Shape up</fullName>
                </value>
                <value>
                    <fullName>Welltok</fullName>
                </value>
                <value>
                    <fullName>Change Health</fullName>
                </value>
                <value>
                    <fullName>Connecture</fullName>
                </value>
                <value>
                    <fullName>Benefit Focus</fullName>
                </value>
                <value>
                    <fullName>Zenefits</fullName>
                </value>
                <value>
                    <fullName>Castlight</fullName>
                </value>
                <value>
                    <fullName>ChangeHealth	Vitals</fullName>
                </value>
                <value>
                    <fullName>Truven</fullName>
                </value>
                <value>
                    <fullName>PolkitDoc</fullName>
                </value>
                <value>
                    <fullName>HealthSparq</fullName>
                </value>
                <value>
                    <fullName>Bluebook Healthcare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configured_Name__c</fullName>
        <label>Configured Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>Month(Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>Text(Year(Created_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rally_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rally Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Marketing_Email__c</fullName>
        <label>Custom Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Marketing_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Marketing Name 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Custom Marketing Name 2)</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Marketing_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Marketing Name 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Custom Marketing Name 3)</relationshipLabel>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Consultant_Email__c</fullName>
        <label>Digital Health Consultant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Consultant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Health Consultant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Digital Health Consultant Name)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Link__c</fullName>
        <description>Direct link for registration</description>
        <label>Direct Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Donations_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donations Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ED_Visits__c</fullName>
        <description>Total number of emergency department visits</description>
        <label>ED Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Lives__c</fullName>
        <label>Eligible Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_Formula__c</fullName>
        <formula>IF(
RecordType.DeveloperName = &apos;Payer&apos;, Total_Members__c,
if(
RecordType.DeveloperName = &apos;Employer&apos;,  NumberOfEmployees ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Gift_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer Gift Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Intranet_Portal__c</fullName>
        <description>URL for employer intranet from which users can SSO to Rally</description>
        <label>Employer Intranet Portal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Client_String__c</fullName>
        <externalId>true</externalId>
        <label>External Client String</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Partner_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Partner ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Friendly_URL__c</fullName>
        <description>Friendly URL</description>
        <label>Friendly URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Lives__c</fullName>
        <label>Fully-Insured Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HEAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HEAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIA_Form_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://rallyhealth.my.salesforce.com/apex/RallyOrderForm?formID=hia&amp;accID=&quot;+Id, &quot;https://rallyhealth.my.salesforce.com/apex/RallyOrderForm?formID=hia&amp;accID=&quot;+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HIA Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthFest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HealthFest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Project_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Project Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Project_Managers__c</fullName>
        <description>IPM&apos;s as indicated on the Support one-sheeters</description>
        <label>Implementation Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elisabeth Dustin</fullName>
                </value>
                <value>
                    <fullName>Irene Ilie</fullName>
                </value>
                <value>
                    <fullName>Jon Wu</fullName>
                </value>
                <value>
                    <fullName>Megan Jorgenson</fullName>
                </value>
                <value>
                    <fullName>Kate Tompkins</fullName>
                </value>
                <value>
                    <fullName>John Michael King</fullName>
                </value>
                <value>
                    <fullName>Alyssa Wiczek</fullName>
                </value>
                <value>
                    <fullName>Allison Owen</fullName>
                </value>
                <value>
                    <fullName>Sika Santanam</fullName>
                </value>
                <value>
                    <fullName>Wesley Cao</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Details__c</fullName>
        <label>Incentive Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <label>Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inpt_Surg_Ops__c</fullName>
        <description>Inpatient surgical operations</description>
        <label>Inpt Surg Ops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Support_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Support Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Custom_Marketing_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Custom Marketing Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Custom Marketing Name)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Launchpad__c</fullName>
        <label>Link to Launchpad</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_PAAF__c</fullName>
        <label>Link to PAAF</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Live_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy (e.g. PBM, SRx, Mfg)</fullName>
                </value>
                <value>
                    <fullName>Payer (e.g. healthplan, TPA)</fullName>
                </value>
                <value>
                    <fullName>Provider (e.g. IDN, ACO, provider group, hospital)</fullName>
                </value>
                <value>
                    <fullName>Government Program</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Health/Productivity</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Key Clients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Size__c</fullName>
        <inlineHelpText>Select the market size for the employer group. If consultant, select their average market segment size for their book of business.</inlineHelpText>
        <label>Market Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small (&lt;500 lives)</fullName>
                </value>
                <value>
                    <fullName>Medium (500-4999 lives)</fullName>
                </value>
                <value>
                    <fullName>Large (&gt;5000 lives)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaigns__c</fullName>
        <description>Used by Account Management and Marketing to track which marketing campaigns a client receives.</description>
        <label>Marketing Campaigns Opted-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coin Exchange</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Rally Care</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Survey Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicaid_Lives__c</fullName>
        <label>Medicaid Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicare_Lives__c</fullName>
        <label>Medicare Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Executive_Visit__c</fullName>
        <label>Most Recent Executive Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAM_SAE_Assignment__c</fullName>
        <label>NAM SAE Assignment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Specialist_Email__c</fullName>
        <label>Onsite Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Onsite_Specialist_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onsite Specialist Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Onsite Specialist Name)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Launch_Date__c</fullName>
        <label>Open Enrollment Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Strategy__c</fullName>
        <label>Open Enrollment Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Surg_Ops__c</fullName>
        <description>Number of outpatient surgical operations</description>
        <label>Opt Surg Ops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optum_Transfer_Number__c</fullName>
        <label>Optum Transfer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Market_Segment__c</fullName>
        <label>Other Market Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outpatient_Visits__c</fullName>
        <description>Number of outpatient visits</description>
        <label>Outpatient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paper_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Portal__c</fullName>
        <description>URL for partner portal from which users can SSO to Rally</description>
        <label>Partner Portal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Entity</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private_Challenge_Invite_Code__c</fullName>
        <label>Private Challenge Invite Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RealAppeal</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Zipongo</fullName>
                </value>
                <value>
                    <fullName>Quit4Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rally_Hosted_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rally Hosted Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rally_Mobile_Code__c</fullName>
        <label>Rally Mobile Code</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rally_Order_Form_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://rallyhealth.my.salesforce.com/apex/RallyOrderForm?formID=rof&amp;accID=&quot;+Id, &quot;https://rallyhealth.my.salesforce.com/apex/RallyOrderForm?formID=rof&amp;accID=&quot;+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rally Order Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Goals__c</fullName>
        <label>Registration Goals</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>